--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="restaurants">Restaurantes</string>
     <string name="marketplaces">Mercados</string>
     <string name="drinks">Bebidas</string>
+    <string name="qrcode_scanner">QrCode Scanner</string>
 </resources>
